NXP-32776: Cleanup tests